# linux-perusteet

./: .pre-commit-config.yaml  404.html  AGENTS.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  siteinfo.json
asennus/aloita/: index.html
asennus/dualboot/: index.html
asennus/opiskelukuntoon/: index.html
asennus/utm/: index.html
asennus/virtualbox/: index.html
c_ohjelmointi/args/: index.html
c_ohjelmointi/merkkijonot/: index.html
c_ohjelmointi/modularisointi/: index.html
c_ohjelmointi/muuttujat/: index.html
c_ohjelmointi/pointterit/: index.html
c_ohjelmointi/streams/: index.html
c_ohjelmointi/tiedostot/: index.html
c_ohjelmointi/yleista/: index.html
cli/standardivirrat/: index.html
cli/startup/: index.html
cli/terminaali/: index.html
docs/: .nav.yml  .pages  exercises.md  index.md
docs/asennus/: .nav.yml  .pages  aloita.md  dualboot.md  opiskelukuntoon.md  utm.md  virtualbox.md
docs/c_ohjelmointi/: .nav.yml  .pages  args.md  headers.md  merkkijonot.md  modularisointi.md  muuttujat.md  pointterit.md  streams.md  tiedostot.md  yleista.md
docs/cli/: .nav.yml  .pages  standardivirrat.md  startup.md  terminaali.md
docs/etakaytto/: ssh.md  tmux.md
docs/linux/: .nav.yml  .pages  kernel.md  os.md
docs/paketinhallinta/: .nav.yml  .pages  cross-distro.md  ohjelmapaketit.md  ohjelmat.md
docs/peruskaytto/: .nav.yml  (+7 more)
exercises/: index.html
images/: user-space_kernel-space.excalidraw
kurssitiedostot/: peruskaytto_luo_filut.sh  tarkista_kayttooikeudet.sh
scripts/: extract_exercise_list.py
search/: search_index.json
(+58 files in other folders)
